--- a/WestsideAuto/newCustomerForm.html
+++ b/WestsideAuto/newCustomerForm.html
@@ -43,10 +43,32 @@
                         <input type="text" class="form-control" name="customer_first_name" id="customerFirstName"
                                placeholder="Enter first name">
                     </div>
+                    <!--<div class="col-sm">-->
+                        <!--<label for="customerPhone">Phone</label>-->
+                        <!--<input type="text" class="form-control" id="customerPhone"-->
+                               <!--placeholder="Enter phone number">-->
+                    <!--</div>-->
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
                     <div class="col-sm">
-                        <label for="customerPhone">Phone</label>
-                        <input type="text" class="form-control" id="customerPhone"
-                               placeholder="Enter phone number">
+                        <label for="DOB">Date of Birth</label>
+                        <input type="date" class="form-control" name="customer_DOB" id="DOB"
+                               placeholder="YYYY-MM-DD">
+                    </div>
+                    <div class="col-sm">
+                        <label for="Gender">Gender</label>
+                        <select id="Gender" name="customer_gender" class="form-control">
+                            <option selected value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <div class="col-sm">
+                        <label for="taxID">Tax ID</label>
+                        <input type="text" class="form-control" name="customer_tax_id" id="taxID"
+                               placeholder="Enter tax id">
                     </div>
                 </div>
             </div>
@@ -54,7 +76,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Enter street address">
+                        <input type="text" class="form-control" name="customer_address" id="address" placeholder="Enter street address">
                     </div>
                 </div>
             </div>
@@ -62,25 +84,25 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="city">City</label>
-                        <input type="text" class="form-control" id="city" placeholder="Enter city">
+                        <input type="text" class="form-control" name="customer_city" id="city" placeholder="Enter city">
                     </div>
                     <div class="col-sm">
                         <label for="province">Province</label>
-                        <select id="province" class="form-control">
+                        <select id="province" name="customer_province" class="form-control">
                             <option selected>Province</option>
-                            <option>Alberta</option>
-                            <option>British Columbia</option>
-                            <option>Manitoba</option>
-                            <option>New Brunswick</option>
-                            <option>Newfoundland and Labrador</option>
-                            <option>Northwest Territories</option>
-                            <option>Nunavut</option>
-                            <option>Nova Scotia</option>
-                            <option>Ontario</option>
-                            <option>Prince Edward Island</option>
-                            <option>Quebec</option>
-                            <option>Saskatchewan</option>
-                            <option>Yukon</option>
+                            <option value="Alberta">Alberta</option>
+                            <option value="British Columbia<">British Columbia</option>
+                            <option value="Manitoba">Manitoba</option>
+                            <option value="New Brunswick">New Brunswick</option>
+                            <option value="Newfoundland and Labrador">Newfoundland and Labrador</option>
+                            <option value="Northwest Territories">Northwest Territories</option>
+                            <option value="Nunavut">Nunavut</option>
+                            <option value="Nova Scotia">Nova Scotia</option>
+                            <option value="Ontario">Ontario</option>
+                            <option value="Prince Edward Island">Prince Edward Island</option>
+                            <option value="Quebec">Quebec</option>
+                            <option value="Saskatchewan">Saskatchewan</option>
+                            <option value="Yukon">Yukon</option>
                         </select>
                     </div>
                 </div>
@@ -89,7 +111,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="postalCode">Postal Code</label>
-                        <input type="text" class="form-control" id="postalCode" placeholder="Enter postal code">
+                        <input type="text" class="form-control" name="customer_postal_code" id="postalCode" placeholder="Enter postal code">
                     </div>
                 </div>
             </div>
@@ -97,7 +119,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="dln">Driver's Licence Number</label>
-                        <input type="text" class="form-control" name="dln" id="dln"
+                        <input type="text" class="form-control" name="driver_license_no" id="dln"
                                placeholder="Enter driver's licence number">
                     </div>
                 </div>
