--- a/WestsideAuto/newEmployeeForm.html
+++ b/WestsideAuto/newEmployeeForm.html
@@ -30,22 +30,22 @@
                 <h1>Add a employee information</h1>
             </div>
         </div>
-        <form id="addEmployee">
+        <form action="insertIntoDB.php" method="post" id="addEmployee">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
                         <label for="customerLastName">Last Name</label>
-                        <input type="text" class="form-control" id="customerLastName"
+                        <input type="text" class="form-control" name="employee_last_name" id="customerLastName"
                                placeholder="Enter last name">
                     </div>
                     <div class="col-sm">
                         <label for="customerFirstName">First Name</label>
-                        <input type="text" class="form-control" id="customerFirstName"
+                        <input type="text" class="form-control" name="employee_first_name" id="customerFirstName"
                                placeholder="Enter first name">
                     </div>
                     <div class="col-sm">
                         <label for="customerPhone">Phone</label>
-                        <input type="text" class="form-control" id="customerPhone"
+                        <input type="text" class="form-control" name="phone_number" id="customerPhone"
                                placeholder="Enter phone number">
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Enter street address">
+                        <input type="text" class="form-control" name="address" id="address" placeholder="Enter street address">
                     </div>
                 </div>
             </div>
@@ -62,11 +62,11 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="city">City</label>
-                        <input type="text" class="form-control" id="city" placeholder="Enter city">
+                        <input type="text" class="form-control" name="city" id="city" placeholder="Enter city">
                     </div>
                     <div class="col-sm">
                         <label for="province">Province</label>
-                        <select id="province" class="form-control">
+                        <select id="province" class="form-control" name="province">
                             <option selected>Province</option>
                             <option>Alberta</option>
                             <option>British Columbia</option>
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="postalCode">Postal Code</label>
-                        <input type="text" class="form-control" id="postalCode" placeholder="Enter postal code">
+                        <input type="text" class="form-control" name="employee_postal_code" id="postalCode" placeholder="Enter postal code">
                     </div>
                 </div>
             </div>
@@ -101,10 +101,9 @@
                     </div>
                     <div class="col-sm">
                         <label for="dept">Department</label>
-                        <select id="dept" name="dept" class="form-control">
-                            <option selected>Department</option>
-                            <option>Sales</option>
-                            <option>Manager Columbia</option>
+                        <select id="dept" name="department" class="form-control">
+                            <option selected>Sales</option>
+                            <option>Manager</option>
                             <option>Mechanic</option>
                             <option>Finance</option>
                             <option>Human Resources</option>
@@ -112,6 +111,7 @@
                     </div>
                 </div>
             </div>
+            <input type="hidden" name="insert_into" value="employee">
             <div class="container" style="padding-top: 20px">
                 <div class="row">
                     <div class="col-sm">
